--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13"
+    "@babel/preset-typescript": "^7.17.12",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^27.5.1",
+    "ts-jest": "^28.0.3"
   },
   "license": "UNLICENSED"
 }
